# rusmppc-egui

./: Cargo.toml  cspell.json  index.html
assets/: manifest.json  sw.js
src/: actions.rs  app.rs  apps.rs  background.rs  client.rs  colors.rs  insight.rs  lib.rs  main.rs  result.rs  runtime.rs  state.rs  types.rs  values.rs  widgets.rs
src/apps/: bind.rs  logs.rs  submit_sm.rs  tabs.rs
src/apps/submit_sm/: encoder.rs
src/types/: url.rs
src/values/: data_coding.rs  esm_class.rs  event.rs  interface_version.rs  mode.rs  npi.rs  priority_flag.rs  ton.rs
src/widgets/: bind_indicator.rs  blinker.rs  combo_box.rs  event_indicator.rs
